# pyhmmsearch

./: pyproject.toml
src/: hmmsearch.py
